# 2023_Audio-Recorder

./: Cargo.toml  README.md  audio_clip.rs  baza.rs  main.rs
src/: audio_clip.rs  baza.rs  main.rs
